# Hip

./: .gitignore  DATA.md  DESIGN.md  README.md  placeholder.py  pyproject.toml  requirements.txt
configs/: base.yaml
scripts/: fetch_tips.sh
src/hiptr/: __init__.py  config.py  eval.py  infer.py  train.py
src/hiptr/data/: alto.py  dataset.py  tokens.py
src/hiptr/model/: modeling_hiptr.py  projector.py
src/hiptr/training/: __init__.py  loop.py  schedule.py  setup.py
src/hiptr/vision/: preprocess.py  tiling.py  tips_encoder.py
tests/: sample.alto.xml  sample.page.xml  test_alto.py  test_eval.py  test_smoke.py
